Initial version of the site
Signed-off-by: Clement Escoffier <clement.escoffier@gmail.com>

--- a/src/site/markdown/chameleon-writing-your-own-deployer.md.vm
+++ b/src/site/markdown/chameleon-writing-your-own-deployer.md.vm
@@ -51,6 +51,7 @@ and if not overriden, call `onFileCreate` on each files given to the `open` meth
      * A dummy deployer.
      */
     @Component
+    @Instantiate
     @Provides
     public class TextDeployer extends DefaultDeployer {
 
