New structure and skin for the documentation
Signed-off-by: Clement Escoffier <clement.escoffier@gmail.com>

--- a/src/site/markdown/chameleon-structure.md.vm
+++ b/src/site/markdown/chameleon-structure.md.vm
@@ -12,8 +12,9 @@ Chameleon structure
  reflecting changes in the OSGi runtime.
  * `conf` contains logging and the platform configuration
 
-
 By default log files are created in the `logs` directory.
+
+<img src="img/structure.png" style="width: 80%;">
 
 The bin directory
 -----------------
