--- a/src/site/markdown/index.md.vm
+++ b/src/site/markdown/index.md.vm
@@ -27,7 +27,7 @@ Downloads
         <div class="review">
             <div class="reinfo">
                 <h4>Release</h4>
-                <p><em>${lastReleasedVersion}</em></p>
+                <p><em>${currentVersion}</em></p>
             </div>
             <div class="button"><a href="#" id="release_download"><i class="icon-download"></i> Download</a> </div>
         </div>
@@ -36,7 +36,7 @@ Downloads
         <div class="review">
             <div class="reinfo">
                 <h4>Development</h4>
-                <p><em>${nextDevelopmentVersion}</em></p>
+                <p><em>${devVersion}</em></p>
             </div>
             <div class="button"><a href="#" id="dev_download"><i class="icon-download"></i> Download</a></div>
         </div>
@@ -56,8 +56,8 @@ OW2 Chameleon Core is licensed under the Apache Software License 2.0
     var repoName = "releases";
     var groupId = "${project.groupId}";
     var artifactId ="${project.artifactId}";
-    var devVersion = "LATEST"; // ${nextDevelopmentVersion}
-    var releaseVersion = "${lastReleasedVersion}"
+    var devVersion = "LATEST"; // ${devVersion}
+    var releaseVersion = "${currentVersion}"
     var packaging = "zip"
 
     $( document ).ready(function() {
